--- a/package.json
+++ b/package.json
@@ -1,29 +1,17 @@
 {
   "name": "tracko-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start -p $PORT",
-    "heroku-postbuild": "npm run build"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/wdbears/tracko-app.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/wdbears/tracko-app/issues"
-  },
-  "homepage": "https://github.com/wdbears/tracko-app#readme",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "next": "^6.1.2",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1"
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-scripts": "1.1.5"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
@@ -36,6 +24,6 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
-    "prettier": "^1.14.2"
+    "prettier": "^1.14.3"
   }
 }
